Polished LOG and fixed bug on DataFrame concatenate

--- a/production.ini
+++ b/production.ini
@@ -12,13 +12,15 @@ pyramid.debug_notfound = false
 pyramid.debug_routematch = false
 pyramid.default_locale_name = en
 
+amda_cache_folder = /tmp/sciqlopcache/amda
+
 ###
 # wsgi server configuration
 ###
 
 [server:main]
 use = egg:waitress#main
-listen = *:6543
+listen = localhost:6543
 
 ###
 # logging configuration
